--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 numpy==1.19.5
 pandas==1.3.2
+keras==2.6.0
 tensorflow==2.6.0
 tensorflow-recommenders==0.6.0
 matplotlib==3.4.3
+seaborn==0.11.2
+dython==0.6.8
 gensim==4.1.2
 uszipcode==0.2.6
-dython==0.6.8
